undo preview feature in java-21 and java-17